--- a/src/styles/components/_dashboard.scss
+++ b/src/styles/components/_dashboard.scss
@@ -36,6 +36,7 @@
     min-height: 700px;
     flex-direction: column;
     position: relative;
+    padding-bottom: 10rem;
 }
 
 .task-wrapper {
@@ -56,7 +57,7 @@
 }
 
 .task-icon {
-    padding: 2rem;
+    padding: 1.25rem;
     border-radius: 40px;
     background: lighten($watermelon, 20%);
     color: white;
@@ -71,23 +72,11 @@
     width: 25%;
 }
 
-.footer-tasks {
-    position: absolute;
-    bottom: 0;
-    padding: 1.5rem;
+.nothing__wrapper {
+    text-align: center;
+    background: darken($watermelon, 5%);
     width: 100%;
-    background: lighten($watermelon, 10%);
-    box-shadow: 0px 0px 10px #0000002a;
-}
-
-.footer-content {
-
-    width: 100%;
-    justify-content: space-between;
-
-    .task-icon {
-        padding: 2rem 2.10rem;
-    }
-
+    border-radius: 10px;
+    padding: 2rem 1rem;
 }
 
