--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -5,3 +5,5 @@
 @import './components/dashboard';
 @import './components/task';
 @import './components/congrats';
+@import './components/addQuest';
+@import './components/footer';
