--- a/src/styles/base/_settings.scss
+++ b/src/styles/base/_settings.scss
@@ -1,10 +1,29 @@
-$violet-blue: #7079cf;
-$non-photo-blue: #aadaf0;
 $platinum: #e8e8e8;
 $cyber-grape: #563f70;
-$watermelon: #eb6383;
-$american-pink: #ff8f96;
-
 $light: white;
 
 $dark: black;
+
+// ##########################################
+// ########## Level Colors ##################
+// ##########################################
+
+// 1
+$watermelon: #eb6383;
+
+// 2
+$american-pink: #550d12;
+
+// 3
+$old-car-yellow: #8d8b0a;
+
+// 4
+$rain: #145eb3;
+
+// 5
+$grass: #07851c;
+
+// 6
+$gun-metal: #2e2e2e;
+
+
