--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -8,3 +8,4 @@
 @import './components/addQuest';
 @import './components/footer';
 @import './components/levelUp';
+@import './components/customize';
